--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://manabu-tsunokai.github.io/puzzle/",
+  "homepage": "https://manabu-tsunokai.github.io/react_fifteen_puzzle/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
