--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cross-env": "^7.0.3",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,10 +15,9 @@
   },
   "homepage": "https://manabu-tsunokai.github.io/react_fifteen_puzzle/",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",    
+    "deploy": "npm run build && gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env PUBLIC_URL=/react_fifteen_puzzle react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
