--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://manabu-tsunokai.github.io/react_fifteen_puzzle/",
+  "homepage": "https://manabu-tsunokai.github.io/react_puzzle/",
   "scripts": {
     "deploy": "npm run build && gh-pages -d build",
     "start": "react-scripts start",
-    "build": "cross-env PUBLIC_URL=/react_fifteen_puzzle react-scripts build",
+    "build": "cross-env PUBLIC_URL=/react_puzzle react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
